CHANGES.txt - 2007-07-25
------------------------

CHANGES IN CUPS V1.3rc1

	- Added Intellitech Intellibar and Zebra CPCL PPDs to the list
	  of installed PPDs.
	- Added 6" and 8" wide label sizes for the Zebra ZPL Label
	  Printer driver (STR #2442)
	- The cupsaddsmb program and web interface now support
	  exporting of 64-bit Windows drivers, when available
	  (STR #2439)
	- Moving a job that was printing did not stop the job on the
	  original printer (STR #2262)
	- The cups-lpd mini-daemon did not work on Mac OS X server.
	- Added httpGetAuthString() and httpSetAuthString() APIs to get
	  and set the current (cached) authorization string to use for
	  HTTP requests.
	- Updated the default cupsd.conf policy to list the
	  "administrative" operations separately from the "printer
	  control" operations so that it is easier to define a
	  group of users that are "printer operators".
	- The web interface now pulls the default cupsd.conf file
	  from cupsd.conf.default in the CUPS config directory.
	- Added a help file for using Kerberos with CUPS.
	- The scheduler now strips the "@KDC" portion of Kerberos
	  usernames since those usernames typically do not appear in
	  the group membership lists used by CUPS.
	- cupsMarkOptions() could (incorrectly) leave multiple option
	  choices marked.
	- Backends could (incorrectly) run as root during discovery
	  (STR #2454)
	- Avahi is now supported for DNS-SD (Bonjour) printer sharing
	  (STR #2455)
	- The default cupsd.conf file had typos and old operation names
	  (STR #2450)
	- The scheduler now erases authentication cache files using the
	  7-pass US DoD algorithm.
	- Delegated Kerberos credentials (proxy authentication) did not
	  work.
	- The filter makefile did not optimize the libcupsimage.2.dylib
	  with a sectorder file.
	- The IPP backend incorrectly wrote an empty printer message
	  when processing the "none" state reason.
	- The USB backend could deadlock on Mac OS X while performing
	  a side-channel command.